# scGPT

./: environment.txt  pyproject.toml
scgpt/model/: model.py
